--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="icone.png" type="image/x-icon">
   <style>
     * {
       margin: 0;
       font-family: 'Urbanist', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>E-commerce</title>
 </head>
 
 <body>
