--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link href="icone.png" type="image/x-icon">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/icone.png">
   <style>
     * {
       margin: 0;
